Updating for Future Exercises

--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,4 @@
 name=akka-custom-dispatcher
-title=Akka with Custom Dispatcher!
+title=Akka with Custom Dispatcher
 description=Basic Akka project with a custom dispatcher
 tags=Basics,akka,scala,starter
